Fix [Nuclio] Fixed cropping of code entry section (#327)

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.less
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.less
@@ -83,6 +83,7 @@
         }
 
         .code-entry-section {
+            min-height: 102px;
             margin-bottom: 20px;
             background-color: @white;
             border: 1px solid @pale-grey-two;
